--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ div.container {
 
   div.bar {
     display:block;
+    font-size:20px;
     float:right;
       border-style: solid;
       border-width: 1px;
@@ -32,6 +33,12 @@ div.container {
     margin-top: 10px;
   }
 
+  div.barquest{
+    margin-left: 50px;
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+
 #account-bar-wrapper{
   position:absolute;
   top:0px;
@@ -46,6 +53,8 @@ div.container {
   height:100%;
   margin:0px auto;
 }
+
+
 
 #account-bar-name{
   font-size:30px;
